# angular-bazel-example

./: WORKSPACE  package.json
.circleci/: config.yml
src/: BUILD.bazel  index.html  web_package.bzl
tools/: BUILD  assembler.ts  injector.ts  tsconfig.json
